<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_medium"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_firstname"/>
            <EditText
                android:id="@+id/edit_firstname"
                android:layout_width="@dimen/app_bar_height"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:textSize="16sp"
                android:background="@drawable/edit_border_gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_lastname"/>
            <EditText
                android:id="@+id/edit_lastname"
                android:layout_width="@dimen/app_bar_height"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:textSize="16sp"
                android:background="@drawable/edit_border_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_email"/>
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="@dimen/app_bar_height"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textSize="16sp"
                android:background="@drawable/edit_border_gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_password"/>
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="@dimen/app_bar_height"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textSize="16sp"
                android:background="@drawable/edit_border_gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_password_confirm"/>
            <EditText
                android:id="@+id/edit_password_confirm"
                android:layout_width="@dimen/app_bar_height"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:background="@drawable/edit_border_gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:orientation="vertical">
            <Button
                android:id="@+id/but_register"
                android:layout_width="@dimen/app_bar_height"
                android:layout_height="@dimen/button_height_normal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:background="@drawable/button_red"
                android:textColor="@color/white_color"
                android:text="@string/text_register"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>