<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/logo"/>
        <LinearLayout
            android:id="@+id/lin_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/spacing_30dp"
            android:paddingBottom="@dimen/spacing_30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_30dp"
                android:layout_marginRight="@dimen/spacing_30dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:hint="@string/text_email"
                    android:textSize="15sp"
                    android:background="@drawable/edit_border_blue"/>
                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/text_password"
                    android:textSize="15sp"
                    android:background="@drawable/edit_border_blue"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/spacing_large"
                    >
                    <Button
                        android:id="@+id/but_login"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height_normal"
                        android:layout_weight="1"
                        android:textColor="@color/white_color"
                        android:background="@drawable/button_blue"
                        android:text="@string/text_login"/>
                    <Button
                        android:id="@+id/but_signup"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_height_normal"
                        android:visibility="gone"
                        android:layout_weight="1"
                        android:background="@drawable/button_signup"
                        android:text="@string/text_register"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>